# RUST-CHAT

./: Cargo.toml  Dioxus.toml  dev-tailwind.sh  package-lock.json  readme.md  start-serve.sh  tailwind.css
assets/: tailwind.css
backend/: Cargo.toml
backend/htmlmock/: agent.html  customer.html
backend/src/: lib.rs  main.rs
backend/src/handlers/: agent_login_handler.rs  auth_handler.rs  mod.rs  ws_room_handler.rs
backend/src/infrastructures/: actix_ws_chat.rs  argon2_infra.rs  jwt_infra.rs  mod.rs
backend/src/middlewares/: auth_middelware.rs  mod.rs
backend/src/models/: agent_model.rs  appstate.rs  chatrooms.rs  customer_model.rs  mod.rs  registor_model.rs  team_model.rs  user_model.rs
backend/src/object_value/: permission.rs  role.rs
backend/src/repositories/: auth_repository.rs
backend/src/services/: auth_service.rs
frontend/: Cargo.toml  README.md
frontend/assets/: tailwind.css
frontend/src/: lib.rs  main.rs  routes.rs
frontend/src/components/: mod.rs  nav.rs
frontend/src/pages/: mod.rs
frontend/src/pages/authen/: authen_page.rs  mod.rs
frontend/src/pages/chat/: box_customer_short.rs  chat_hook.rs  chat_layout.rs  chat_model.rs  chat_page.rs  mod.rs
frontend/src/pages/home/: home_page.rs
frontend/src/pages/login/: login_page.rs  mod.rs
frontend/src/requset/: authen_request.rs  mod.rs  protect.rs
shared/: .gitignore
shared/src/: lib.rs
shared/src/entitys/: mod.rs
shared/src/models/: auth_model.rs  claims_model.rs  login_model.rs  mod.rs
src/: main.rs  routes.rs
src/components/: nav.rs
src/pages/: mod.rs
src/pages/chat/: chat_hook.rs  chat_layout.rs  chat_model.rs  chat_page.rs  mod.rs
src/pages/home/: home_page.rs
src/pages/login/: login_model.rs  login_page.rs
