[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9"
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.11.0"
env_logger = "0.10"
log = "0.4"
actix-cors = "0.7.1"
argon2 = "0.5"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3.31"
