[package]
name = "frontend"
version = "0.1.0"
authors = ["lidm0707 <lightdemon17@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
futures = "0.3.31"
futures-util = "0.3.31"
gloo-net = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
shared = { path = "../shared" }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
